# haforu

./: .cursorrules  .gitignore  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPILATION_FIXES.md  Cargo.toml  DEPENDENCIES.md  GEMINI.md  INDEX.md  INSTALL.md  KEY_FINDINGS.md  LLXPRT.md  NEXTTASK.md  PLAN.md  README.md  SIMPLIFICATION-SUMMARY.md  TODO.md  WORK.md  build.sh  llms-haforu.txt  llms.sh  llms.txt  publish.sh  pyproject.toml  run.sh  smoke_test.rs  test  test_job.json
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: cli.rs  performance.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
docs/: CLI-USAGE.md  REPOSITORY.md
examples/: orchestrator_demo.rs  orchestrator_simple.rs  shape_and_render.rs  smoke_test.rs
examples/python/: batch_demo.py  error_handling_demo.py  metrics_demo.py  numpy_demo.py  streaming_demo.py  varsweep_demo.py
issues/: 101.md  102.md
python/haforu/: __init__.py  __init__.pyi  __main__.py
python/tests/: test_batch.py  test_errors.py  test_streaming.py
scripts/: batch_smoke.sh  build.sh  jobs_smoke.jsonl  profile-cli.sh  regression-test.sh  run.sh  sync-version.sh  test-cli-parity.sh
src/: batch.rs  bufpool.rs  cache.rs  error.rs  font_loader.rs  fonts.rs  image_ops.rs  input.rs  json_parser.rs  lib.rs  logging.rs  main.rs  memory_tracker.rs  mmap_font.rs  orchestrator.rs  output.rs  rasterize.rs  render.rs  security.rs  shaping.rs  storage.rs  varsweep.rs
src/python/: batch.rs  errors.rs  image_ops.rs  mod.rs  streaming.rs  types.rs
testdata/: jobs_smoke.jsonl
testdata/fonts/: README.md
tests/: __init__.py  cli.rs  cli_stats.rs  e2e_shaping_rendering.rs  error_recovery.rs  integration_test.rs  test_batch.py  test_errors.py  test_numpy.py  test_streaming.py
