[package]
name = "haforu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
crc32fast = "1.5.0"
env_logger = "0.11.8"
harfrust = "0.3.2"
log = "0.4.28"
lz4_flex = "0.11.5"
memmap2 = "0.9.9"
num_cpus = "1.16"
parley = "0.6.0"
rayon = "1.11.0"
read-fonts = "0.35.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
skrifa = "0.38.0"
thiserror = "2.0.17"
vello = "0.6.0"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.23.0"
