# this_file: pyproject.toml

[build-system]
requires = ["maturin>=1.0,<2.0", "hatch-vcs>=0.4.0"]
build-backend = "maturin"

[project]
name = "haforu"
dynamic = ["version"]
description = "High-performance batch font renderer for FontSimi"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "FontSimi Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]
keywords = ["font", "rendering", "batch", "typography"]

dependencies = [
    "numpy>=1.20",
    "fire>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pillow>=10.0",
    "hatch>=1.9.0",
]
# Platform-specific extras
mac = []  # macOS-specific dependencies (universal2 wheel)
windows = []  # Windows-specific dependencies
linux = []  # Linux-specific dependencies (manylinux wheel)
all = ["pillow>=10.0"]  # All optional dependencies

[project.urls]
Homepage = "https://github.com/fontsimi/haforu"
Repository = "https://github.com/fontsimi/haforu"

[project.scripts]
haforu-py = "haforu.__main__:main"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "haforu._haforu"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "B", "A", "C4", "T10", "T20", "Q"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }

[tool.hatch.build.hooks.vcs]
version-file = "python/haforu/_version.py"
