# this_file: bindings/python/Cargo.toml
[package]
name = "haforu-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for haforu (font shaping and rendering)"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "haforu"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
serde_json = "1"
haforu = { path = "../../" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

